Tweaks to fix #65 yet maintain correct spacing for header h1.

--- a/simple.css
+++ b/simple.css
@@ -73,7 +73,7 @@ body > header {
 
 body > header h1 {
   max-width: 1200px;
-  margin: 1rem auto;
+  margin: 0 auto;
 }
 
 body > header p {
@@ -224,7 +224,7 @@ nav {
 
 nav a,
 nav a:visited {
-  margin: 0 1rem 0 0;
+  margin: 0 1rem 1rem 0;
   border: 1px solid var(--border);
   border-radius: 5px;
   color: var(--text);
